WSL2上でもDocker環境が立ち上がるように修正

--- a/docker/mysql/my.cnf
+++ b/docker/mysql/my.cnf
@@ -1,7 +1,7 @@
 # MySQLサーバーへの設定
 [mysqld]
 # SQLモード
-sql_mode=NO_ENGINE_SUBSTITUTION
+sql_mode = NO_ENGINE_SUBSTITUTION
 
 # 文字コード/照合順序の設定
 character-set-server = utf8mb4
