fixed: インストール後に必要なファイルが一部.gitignoreに追加されていたため、修正(#1)

--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,10 @@ test/vtlib/HTML/*
 user_privileges/*
 !user_privileges/sharing_privileges_1.php
 !user_privileges/user_privileges_1.php
+!user_privileges/audit_trail.php
+!user_privileges/default_module_view.php
+!user_privileges/enable_backup.php
+!user_privileges/index.html
 /*.xlsx
 .DS_Store
 .vscode
