--- a/docker/php/php.ini
+++ b/docker/php/php.ini
@@ -7,6 +7,7 @@ post_max_size = 32M
 upload_max_filesize = 32M
 max_execution_time = 60
 display_errors = Off
+short_open_tag = Off
 
 [Date]
 date.timezone = "Asia/Tokyo"
