docker環境にxdebug3がインストールされるように修正し、README.mdを修正

--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -31,3 +31,5 @@ RUN set -xe; \
     # for imap
     && docker-php-ext-configure imap --with-kerberos --with-imap-ssl && \
     docker-php-ext-install -j$(nproc) imap
+RUN pecl install xdebug \
+  && docker-php-ext-enable xdebug
