--- a/docker/php/php.ini
+++ b/docker/php/php.ini
@@ -11,3 +11,10 @@ short_open_tag = Off
 
 [Date]
 date.timezone = "Asia/Tokyo"
+
+[xdebug]
+xdebug.mode=debug
+xdebug.start_with_request = yes
+; host.docker.internalはdockerのhostマシンのIPを解決してくれる。
+xdebug.client_host=host.docker.internal
+xdebug.client_port=9003
