--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,7 @@ services:
       FREVOCRM_INSTALLER_DB_NAME: "frevocrm"
       # Xdebugの設定を有効にしたい場合は、mode=debug に変更してください
       XDEBUG_CONFIG: "mode=off client_host=host.docker.internal client_port=9003 start_with_request=yes"
+      TZ: "Asia/Tokyo"
   db:
     build:
       context: "."
