--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,7 @@ storage/*
 test/curumeru_csv/*
 test/templates_c
 test/upload/*
+!test/upload
 test/vtlib/CSS/*
 test/vtlib/URI/*
 test/vtlib/HTML/*
