--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
     volumes:
       - ./docker/php/php.ini:/usr/local/etc/php/php.ini
       - ./:/var/www/html:cached
+      - ./docker/php/custom.httpd.conf:/etc/httpd/conf.d/custom.httpd.conf
       - app-ignore-1:/var/www/html/test/template_c
     ports:
       - 80:80
