fixed #323 mysqlのコンテナにnkfを含まないように修正

--- a/docker/mysql/Dockerfile
+++ b/docker/mysql/Dockerfile
@@ -3,4 +3,4 @@ RUN mkdir /var/log/mysql
 RUN chown mysql:mysql /var/log/mysql
 ADD ./docker/mysql/my.cnf /etc/mysql/conf.d/my.cnf
 RUN chmod 644 /etc/mysql/conf.d/my.cnf
-RUN apt update && apt-get install nkf
+RUN apt update
