docker環境を立てた時にxdebugのオプションを初期値でoffにするように修正

--- a/docker/php/php.ini
+++ b/docker/php/php.ini
@@ -13,7 +13,7 @@ short_open_tag = Off
 date.timezone = "Asia/Tokyo"
 
 [xdebug]
-xdebug.mode=debug
+xdebug.mode=off
 xdebug.start_with_request = yes
 ; host.docker.internalはdockerのhostマシンのIPを解決してくれる。
 xdebug.client_host=host.docker.internal
