インストール時に生成されるZipファイルを除外するように修正

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@ cache/import/*
 !cache/import/.htaccess
 cache/upload/*
 !cache/upload/.htaccess
+cache/*.zip
 storage/*
 !storage/.htaccess
 test/curumeru_csv/*
