--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,6 +23,29 @@ services:
       # Xdebugの設定を有効にしたい場合は、mode=debug に変更してください
       XDEBUG_CONFIG: "mode=off client_host=host.docker.internal client_port=9003 start_with_request=yes"
       TZ: "Asia/Tokyo"
+  webdb:
+    container_name: headlesschrome
+    image: headlesschrome:latest
+    build:
+      context: "."
+      dockerfile: ./docker/headlesschrome/Dockerfile
+    volumes:
+      - ./docker/chrome-headless:/var/www/html
+      - ./test:/var/www/html/html2pdf/test
+    ports:
+     - "30080:80"
+    privileged: true
+    # command: /sbin/init
+    command: >
+      sh -c 'usermod -u `stat -c %u /html2pdf/` www-data
+             groupmod -g `stat -c %u /html2pdf/` www-data
+             chown -R www-data.www-data /var/www/html
+             chown -R www-data.www-data /html2pdf
+             exec /sbin/init'
+    dns: 8.8.8.8
+    # 自動起動の有効化
+    restart: always
+
   db:
     build:
       context: "."
