PHP8対応：ログ出力をmonologに変更

--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
     "smarty/smarty": "^4.3",
     "dg/rss-php": "^1.5",
     "ezyang/htmlpurifier": "^4.16",
-    "tecnickcom/tcpdf": "^6.6"
+    "tecnickcom/tcpdf": "^6.6",
+    "monolog/monolog": "^2.9"
     }
 }
