--- a/.github/workflows/manage_jira_issues.yml
+++ b/.github/workflows/manage_jira_issues.yml
@@ -31,55 +31,73 @@ jobs:
         --user "${{ secrets.JIRA_USER_EMAIL }}:${{ secrets.JIRA_API_TOKEN }}" \
         --header 'Accept: application/json' \
         --header 'Content-Type: application/json' \
-          | jq -r '.issues[0].key // empty')
+        | jq -r '.issues[0].key // empty')
 
-        GITHUB_ISSUE_TITLE="${GITHUB_ISSUE_TITLE}"
-        GITHUB_ISSUE_BODY="${GITHUB_ISSUE_BODY}"
+        SUMMARY="github#${{ github.event.issue.number }} $GITHUB_ISSUE_TITLE"
+
+        # 変換処理：Markdown → JIRA Wiki
+        BODY_CONVERTED=$(echo "$GITHUB_ISSUE_BODY" | perl -pe '
+          s/\*\*(.+?)\*\*/\*$1\*/g;           # 太字 **text** → *text*
+          s/__(.+?)__/+$1+/g;                 # 下線 __text__ → +text+
+          s/^\* /- /gmi;                      # 箇条書き * item → - item
+          s/^### (.+)/h3. $1/gm;             # 見出し ### → h3.
+          s/^## (.+)/h2. $1/gm;
+          s/^# (.+)/h1. $1/gm;
+          s/\[([^\]]+?)\]\(([^)]+?)\)/\[$1|$2\]/g; # リンク [text](url) → [text|url]
+        ')
+
+        DESCRIPTION="${{ github.event.issue.html_url }}
+
+        $BODY_CONVERTED"
 
         if [ "${{ github.event.action }}" = "opened" ] || [ "${{ github.event.action }}" = "edited" ]; then
           if [ -z "$ISSUE_KEY" ]; then
             # チケットが存在しない場合は新規作成
+            JSON_PAYLOAD=$(jq -n \
+              --arg summary "$SUMMARY" \
+              --arg description "$DESCRIPTION" \
+              --arg project "${{ secrets.JIRA_PROJECT }}" \
+              '{
+                fields: {
+                  project: { key: $project },
+                  issuetype: { name: "Task" },
+                  summary: $summary,
+                  description: $description,
+                  labels: ["github-issue"]
+                }
+              }')
+
             curl -X POST \
               -H "Content-Type: application/json" \
-              -u ${{ secrets.JIRA_USER_EMAIL }}:${{ secrets.JIRA_API_TOKEN }} \
-              -d "{
-                \"fields\": {
-                  \"project\": {
-                    \"key\": \"${{ secrets.JIRA_PROJECT }}\"
-                  },
-                  \"issuetype\": {
-                    \"name\": \"Task\"
-                  },
-                  \"summary\": \"github#${{ github.event.issue.number }} $GITHUB_ISSUE_TITLE\",
-                  \"description\": \"${{ github.event.issue.html_url }}\n\n$GITHUB_ISSUE_BODY\",
-                  \"labels\": [
-                    \"github-issue\"
-                  ]
-                }
-              }" \
-              ${{ secrets.JIRA_BASE_URL }}/rest/api/2/issue/
+              -u "${{ secrets.JIRA_USER_EMAIL }}:${{ secrets.JIRA_API_TOKEN }}" \
+              -d "$JSON_PAYLOAD" \
+              "${{ secrets.JIRA_BASE_URL }}/rest/api/2/issue/"
           else
             # チケットが存在する場合は更新
+            JSON_PAYLOAD=$(jq -n \
+              --arg summary "$SUMMARY" \
+              --arg description "$DESCRIPTION" \
+              '{
+                fields: {
+                  summary: $summary,
+                  description: $description,
+                  labels: ["github-issue"]
+                }
+              }')
+
             curl -X PUT \
               -H "Content-Type: application/json" \
-              -u ${{ secrets.JIRA_USER_EMAIL }}:${{ secrets.JIRA_API_TOKEN }} \
-              -d "{
-                \"fields\": {
-                  \"summary\": \"github#${{ github.event.issue.number }} $GITHUB_ISSUE_TITLE\",
-                  \"description\": \"${{ github.event.issue.html_url }}\n\n$GITHUB_ISSUE_BODY\",
-                  \"labels\": [
-                    \"github-issue\"
-                  ]
-                }
-              }" \
-              ${{ secrets.JIRA_BASE_URL }}/rest/api/2/issue/$ISSUE_KEY
+              -u "${{ secrets.JIRA_USER_EMAIL }}:${{ secrets.JIRA_API_TOKEN }}" \
+              -d "$JSON_PAYLOAD" \
+              "${{ secrets.JIRA_BASE_URL }}/rest/api/2/issue/$ISSUE_KEY"
           fi
+
         elif [ "${{ github.event.action }}" = "deleted" ]; then
           if [ -n "$ISSUE_KEY" ]; then
             # チケットが存在する場合、ラベルにgithub-deletedを追加
             curl -X PUT \
               -H "Content-Type: application/json" \
-              -u ${{ secrets.JIRA_USER_EMAIL }}:${{ secrets.JIRA_API_TOKEN }} \
+              -u "${{ secrets.JIRA_USER_EMAIL }}:${{ secrets.JIRA_API_TOKEN }}" \
               -d '{
                 "update": {
                   "labels": [
@@ -87,14 +105,15 @@ jobs:
                   ]
                 }
               }' \
-              ${{ secrets.JIRA_BASE_URL }}/rest/api/2/issue/$ISSUE_KEY
+              "${{ secrets.JIRA_BASE_URL }}/rest/api/2/issue/$ISSUE_KEY"
           fi
+
         elif [ "${{ github.event.action }}" = "closed" ]; then
           if [ -n "$ISSUE_KEY" ]; then
             # チケットが存在する場合、ラベルにgithub-closedを追加
             curl -X PUT \
               -H "Content-Type: application/json" \
-              -u ${{ secrets.JIRA_USER_EMAIL }}:${{ secrets.JIRA_API_TOKEN }} \
+              -u "${{ secrets.JIRA_USER_EMAIL }}:${{ secrets.JIRA_API_TOKEN }}" \
               -d '{
                 "update": {
                   "labels": [
@@ -102,14 +121,15 @@ jobs:
                   ]
                 }
               }' \
-              ${{ secrets.JIRA_BASE_URL }}/rest/api/2/issue/$ISSUE_KEY
+              "${{ secrets.JIRA_BASE_URL }}/rest/api/2/issue/$ISSUE_KEY"
           fi
+
         elif [ "${{ github.event.action }}" = "reopened" ]; then
           if [ -n "$ISSUE_KEY" ]; then
             # チケットが存在する場合、ラベルからgithub-closedを削除
             curl -X PUT \
               -H "Content-Type: application/json" \
-              -u ${{ secrets.JIRA_USER_EMAIL }}:${{ secrets.JIRA_API_TOKEN }} \
+              -u "${{ secrets.JIRA_USER_EMAIL }}:${{ secrets.JIRA_API_TOKEN }}" \
               -d '{
                 "update": {
                   "labels": [
@@ -117,7 +137,7 @@ jobs:
                   ]
                 }
               }' \
-              ${{ secrets.JIRA_BASE_URL }}/rest/api/2/issue/$ISSUE_KEY
+              "${{ secrets.JIRA_BASE_URL }}/rest/api/2/issue/$ISSUE_KEY"
           fi
         fi
       env:
