thinkingreed-inc#{1287} 作業中コミット

--- a/composer.json
+++ b/composer.json
@@ -14,12 +14,14 @@
     },
     "minimum-stability": "stable",
     "require": {
-	"ext-mysqli": "*",
-	"ext-imap": "*",
-    "smarty/smarty": "^4.3",
-    "dg/rss-php": "^1.5",
-    "ezyang/htmlpurifier": "^4.16",
-    "tecnickcom/tcpdf": "^6.6",
-    "monolog/monolog": "^2.9"
+        "ext-mysqli": "*",
+        "ext-imap": "*",
+        "smarty/smarty": "^4.3",
+        "dg/rss-php": "^1.5",
+        "ezyang/htmlpurifier": "^4.16",
+        "tecnickcom/tcpdf": "^6.6",
+        "monolog/monolog": "^2.9",
+        "pragmarx/google2fa": "^8.0",
+        "web-auth/webauthn-lib": "^5.2"
     }
 }
