--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -31,8 +31,7 @@ RUN set -xe; \
     # for imap
     && docker-php-ext-configure imap --with-kerberos --with-imap-ssl && \
     docker-php-ext-install -j$(nproc) imap
-#RUN pecl install xdebug-3.1.6 \
-#  && docker-php-ext-enable xdebug
+# RUN pecl install xdebug && docker-php-ext-enable xdebug
 
 COPY --from=composer/composer /usr/bin/composer /usr/bin/composer
 
