--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
         "tecnickcom/tcpdf": "^6.6",
         "monolog/monolog": "^2.9",
         "pragmarx/google2fa": "^8.0",
-        "web-auth/webauthn-lib": ">=3.3.12",
+        "web-auth/webauthn-lib": "3.3.12",
         "nyholm/psr7": "^1.8",
         "nyholm/psr7-server": "^1.1",
         "symfony/http-foundation": "^5.4"
