--- a/.htaccess
+++ b/.htaccess
@@ -1,1 +1,5 @@
-deny from all
+RewriteEngine On
+
+# Force all requests to go to public directory (except public itself)
+RewriteCond %{REQUEST_URI} !public/
+RewriteRule ^(.*)$ public/$1 [L,QSA]
