WebComponetns用ライブラリなどを.gitignoreに登録

--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,10 @@ config.inc.php
 compose.override.yaml
 .env
 /vendor
+
+# for react-web-components
+/assets/react-web-components/node_modules
+/assets/react-web-components/.vite
+/public/resources/web-components/*
+!/public/resources/web-components/.gitkeep
+/assets/react-web-components/coverage/*
